Drop "No support data" & icon if support is null

--- a/output/multipage/links.html
+++ b/output/multipage/links.html
@@ -119,7 +119,7 @@
   
   <header id=head class="head with-buttons">
    <a href=https://whatwg.org/ class=logo><img width=100 alt=WHATWG crossorigin="" src=https://resources.whatwg.org/logo.svg height=100></a>
-   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>8 April 2020</span></h2></hgroup>
+   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>9 April 2020</span></h2></hgroup>
    
    
 
@@ -791,7 +791,7 @@
 
 
 
-  <h4 id=linkTypes><span class=secno>4.6.6</span> Link types<a href=#linkTypes class=self-link></a></h4><aside class="mdn-anno wrapped"><button onclick=toggleStatus(this) class=mdn-anno-btn><b title="No support in current engines." class=less-than-two-engines-flag>⚠</b><span>MDN</span></button><div class=feature><p><a href=https://developer.mozilla.org/en-US/docs/Web/HTML/Link_types title="In HTML, link types indicate the relationship between two documents, in which one links to the other using an <a>, <area>, <form>, or <link> element.">Link_types</a><p class=less-than-two-engines-text>No support in current engines.<p class=nosupportdata>No support data.</div></aside>
+  <h4 id=linkTypes><span class=secno>4.6.6</span> Link types<a href=#linkTypes class=self-link></a></h4><aside class="mdn-anno wrapped"><button onclick=toggleStatus(this) class=mdn-anno-btn><span>MDN</span></button><div class=feature><p><a href=https://developer.mozilla.org/en-US/docs/Web/HTML/Link_types title="In HTML, link types indicate the relationship between two documents, in which one links to the other using an <a>, <area>, <form>, or <link> element.">Link_types</a></div></aside>
 
   <p>The following table summarizes the link types that are defined by this specification, by their
   corresponding keywords. This table is non-normative; the actual definitions for the link types are
