--- a/output/multipage/browsers.html
+++ b/output/multipage/browsers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class=split lang=en-US-x-hixie><script src=/link-fixup.js defer=""></script><meta charset=utf-8><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name=viewport><title>HTML Standard</title><meta content=#3c790a name=theme-color><link rel=stylesheet href=https://resources.whatwg.org/spec.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard.css crossorigin=""><link rel=stylesheet href=https://raw.githack.com/whatwg/whatwg.org/sideshowbarker/bikeshed-mdn-anno-styles/resources.whatwg.org/standard-shared-with-dev.css crossorigin=""><link rel=icon href=https://resources.whatwg.org/logo.svg crossorigin=""><script>
+<!DOCTYPE html><html class=split lang=en-US-x-hixie><script src=/link-fixup.js defer=""></script><meta charset=utf-8><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name=viewport><title>HTML Standard</title><meta content=#3c790a name=theme-color><link rel=stylesheet href=https://resources.whatwg.org/spec.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard-shared-with-dev.css crossorigin=""><link rel=icon href=https://resources.whatwg.org/logo.svg crossorigin=""><script>
    function toggleStatus(div) {
      div.parentNode.classList.toggle('wrapped');
    }
@@ -119,7 +119,7 @@
   
   <header id=head class="head with-buttons">
    <a href=https://whatwg.org/ class=logo><img width=100 alt=WHATWG crossorigin="" src=https://resources.whatwg.org/logo.svg height=100></a>
-   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>9 April 2020</span></h2></hgroup>
+   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>16 April 2020</span></h2></hgroup>
    
    
 
@@ -261,10 +261,9 @@
    given <var>browsingContext</var> and <var>origin</var>. <a href=references.html#refsFEATUREPOLICY>[FEATUREPOLICY]</a><li><p>Let <var>agent</var> be the result of <a href=webappapis.html#obtain-similar-origin-window-agent id=creating-browsing-contexts:obtain-similar-origin-window-agent>obtaining a similar-origin window agent</a> given
    <var>origin</var> and <var>group</var>.<li>
     <p>Let <var>realm execution context</var> be the result of <a id=creating-browsing-contexts:creating-a-new-javascript-realm href=webappapis.html#creating-a-new-javascript-realm>creating a new JavaScript
-    realm</a> with the following customizations:</p>
+    realm</a> given <var>agent</var> and the following customizations:</p>
 
-    <ul><li><p>For the agent, use <var>agent</var>. <span class=XXX>This pointer is not yet defined
-     in the JavaScript specification; see <a href=https://github.com/tc39/ecma262/issues/1357>tc39/ecma262#1357</a>.</span><li><p>For the global object, create a new <code id=creating-browsing-contexts:window><a href=window-object.html#window>Window</a></code> object.<li><p>For the global <b>this</b> binding, use <var>browsingContext</var>'s
+    <ul><li><p>For the global object, create a new <code id=creating-browsing-contexts:window><a href=window-object.html#window>Window</a></code> object.<li><p>For the global <b>this</b> binding, use <var>browsingContext</var>'s
      <code id=creating-browsing-contexts:windowproxy-2><a href=window-object.html#windowproxy>WindowProxy</a></code> object.</ul>
    <li><p>Let <var>topLevelOrigin</var> be <var>intendedTopLevelOrigin</var>, if present, otherwise
    let <var>topLevelOrigin</var> be <var>origin</var>.
