--- a/output/multipage/browsing-the-web.html
+++ b/output/multipage/browsing-the-web.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class=split lang=en-US-x-hixie><script src=/link-fixup.js defer=""></script><meta charset=utf-8><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name=viewport><title>HTML Standard</title><meta content=#3c790a name=theme-color><link rel=stylesheet href=https://resources.whatwg.org/spec.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard.css crossorigin=""><link rel=stylesheet href=https://raw.githack.com/whatwg/whatwg.org/sideshowbarker/bikeshed-mdn-anno-styles/resources.whatwg.org/standard-shared-with-dev.css crossorigin=""><link rel=icon href=https://resources.whatwg.org/logo.svg crossorigin=""><script>
+<!DOCTYPE html><html class=split lang=en-US-x-hixie><script src=/link-fixup.js defer=""></script><meta charset=utf-8><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name=viewport><title>HTML Standard</title><meta content=#3c790a name=theme-color><link rel=stylesheet href=https://resources.whatwg.org/spec.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard-shared-with-dev.css crossorigin=""><link rel=icon href=https://resources.whatwg.org/logo.svg crossorigin=""><script>
    function toggleStatus(div) {
      div.parentNode.classList.toggle('wrapped');
    }
@@ -119,7 +119,7 @@
   
   <header id=head class="head with-buttons">
    <a href=https://whatwg.org/ class=logo><img width=100 alt=WHATWG crossorigin="" src=https://resources.whatwg.org/logo.svg height=100></a>
-   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>9 April 2020</span></h2></hgroup>
+   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>16 April 2020</span></h2></hgroup>
    
    
 
@@ -559,8 +559,9 @@
    <var>activeDocumentNavigationOrigin</var>.
 
    <li>
-    <p>Let <var>featurePolicy</var> be the result of <a id=navigating-across-documents:creating-a-feature-policy-from-a-response href=https://wicg.github.io/feature-policy/#create-from-response data-x-internal=creating-a-feature-policy-from-a-response>creating a feature policy from a response</a>
-    given <var>browsingContext</var>, <var>origin</var>, and <var>response</var>. <a href=references.html#refsFEATUREPOLICY>[FEATUREPOLICY]</a></p>
+    <p>Let <var>featurePolicy</var> be the result of <a id=navigating-across-documents:creating-a-feature-policy-from-a-response href=https://wicg.github.io/feature-policy/#create-from-response data-x-internal=creating-a-feature-policy-from-a-response>creating a feature policy from a
+    response</a> given <var>browsingContext</var>, <var>origin</var>, and <var>response</var>.
+    <a href=references.html#refsFEATUREPOLICY>[FEATUREPOLICY]</a></p>
 
     <div class=note>
      <p>The <a id=navigating-across-documents:creating-a-feature-policy-from-a-response-2 href=https://wicg.github.io/feature-policy/#create-from-response data-x-internal=creating-a-feature-policy-from-a-response>creating a feature policy from a response</a> algorithm makes use of
@@ -575,28 +576,28 @@
      <p>See below for some examples of this in action.</p>
     </div>
    <li><p>If <var>browsingContext</var>'s only entry in its <a id=navigating-across-documents:session-history href=history.html#session-history>session history</a> is the
-   <code id=navigating-across-documents:about:blank><a href=infrastructure.html#about:blank>about:blank</a></code> <code id=navigating-across-documents:document-3><a href=dom.html#document>Document</a></code> that was added when <var>browsingContext</var> was
-   <a href=browsers.html#creating-a-new-browsing-context id=navigating-across-documents:creating-a-new-browsing-context>created</a>, and navigation is occurring with
-   <a href=#replacement-enabled id=navigating-across-documents:replacement-enabled-3>replacement enabled</a>, and that <code id=navigating-across-documents:document-4><a href=dom.html#document>Document</a></code> has the <a id=navigating-across-documents:same-origin-7 href=origin.html#same-origin>same origin</a>
-   as <var>origin</var>, then do nothing.<li>
+   initial <code id=navigating-across-documents:about:blank><a href=infrastructure.html#about:blank>about:blank</a></code> <code id=navigating-across-documents:document-3><a href=dom.html#document>Document</a></code> that was added when
+   <var>browsingContext</var> was <a href=browsers.html#creating-a-new-browsing-context id=navigating-across-documents:creating-a-new-browsing-context>created</a>, and
+   navigation is occurring with <a href=#replacement-enabled id=navigating-across-documents:replacement-enabled-3>replacement enabled</a>, and that <code id=navigating-across-documents:document-4><a href=dom.html#document>Document</a></code>'s
+   <a id=navigating-across-documents:concept-origin-12 href=origin.html#concept-origin>origin</a> is <a id=navigating-across-documents:same-origin-domain-2 href=origin.html#same-origin-domain>same origin-domain</a> with <var>origin</var>, then do
+   nothing.<li>
     <p>Otherwise:</p>
 
     <ol><li><p>Let <var>agent</var> be the result of <a href=webappapis.html#obtain-similar-origin-window-agent id=navigating-across-documents:obtain-similar-origin-window-agent>obtaining a similar-origin window agent</a> given
      <var>origin</var> and <var>browsingContext</var>'s <a href=browsers.html#tlbc-group id=navigating-across-documents:tlbc-group>group</a>.<li>
       <p>Let <var>realm execution context</var> be the result of <a id=navigating-across-documents:creating-a-new-javascript-realm href=webappapis.html#creating-a-new-javascript-realm>creating a new JavaScript
-      realm</a> with the following customizations:</p>
+      realm</a> given <var>agent</var> and the following customizations:</p>
 
-      <ul><li><p>For the agent, use <var>agent</var>. <span class=XXX>This pointer is not
-       yet defined in the JavaScript specification; see <a href=https://github.com/tc39/ecma262/issues/1357>tc39/ecma262#1357</a>.</span><li><p>For the global object, create a new <code id=navigating-across-documents:window-2><a href=window-object.html#window>Window</a></code> object.<li><p>For the global <b>this</b> binding, use <var>browsingContext</var>'s
+      <ul><li><p>For the global object, create a new <code id=navigating-across-documents:window-2><a href=window-object.html#window>Window</a></code> object.<li><p>For the global <b>this</b> binding, use <var>browsingContext</var>'s
        <code id=navigating-across-documents:windowproxy-2><a href=window-object.html#windowproxy>WindowProxy</a></code> object.</ul>
      <li><p>Let <var>topLevelOrigin</var> be <var>origin</var> if <var>browsingContext</var> is
      <a id=navigating-across-documents:top-level-browsing-context-4 href=browsers.html#top-level-browsing-context>top-level browsing context</a>, otherwise let <var>topLevelOrigin</var> be
      <var>browsingContext</var>'s <a id=navigating-across-documents:top-level-browsing-context-5 href=browsers.html#top-level-browsing-context>top-level browsing context</a>'s
-     <a id=navigating-across-documents:active-document-15 href=browsers.html#active-document>active document</a>'s <a id=navigating-across-documents:concept-origin-12 href=origin.html#concept-origin>origin</a>.<li><p><a id=navigating-across-documents:set-up-a-window-environment-settings-object href=window-object.html#set-up-a-window-environment-settings-object>Set up a window environment settings object</a> with <var>realm execution
+     <a id=navigating-across-documents:active-document-15 href=browsers.html#active-document>active document</a>'s <a id=navigating-across-documents:concept-origin-13 href=origin.html#concept-origin>origin</a>.<li><p><a id=navigating-across-documents:set-up-a-window-environment-settings-object href=window-object.html#set-up-a-window-environment-settings-object>Set up a window environment settings object</a> with <var>realm execution
      context</var>, <var>topLevelOrigin</var>, and <var>reservedEnvironment</var>, if
      present.</ol>
    <li><p>Let <var>document</var> be a new <code id=navigating-across-documents:document-5><a href=dom.html#document>Document</a></code>, whose <a href=https://dom.spec.whatwg.org/#concept-document-type id=navigating-across-documents:concept-document-type-2 data-x-internal=concept-document-type>type</a> is <var>type</var>, <a href=https://dom.spec.whatwg.org/#concept-document-content-type id=navigating-across-documents:concept-document-content-type-2 data-x-internal=concept-document-content-type>content type</a> is <var>contentType</var>,
-   <a id=navigating-across-documents:concept-origin-13 href=origin.html#concept-origin>origin</a> is <var>origin</var>, <a href=dom.html#concept-document-feature-policy id=navigating-across-documents:concept-document-feature-policy>feature
+   <a id=navigating-across-documents:concept-origin-14 href=origin.html#concept-origin>origin</a> is <var>origin</var>, <a href=dom.html#concept-document-feature-policy id=navigating-across-documents:concept-document-feature-policy>feature
    policy</a> is <var>featurePolicy</var>, and <a id=navigating-across-documents:active-sandboxing-flag-set href=origin.html#active-sandboxing-flag-set>active sandboxing flag set</a> is
    <var>finalSandboxFlags</var>.<li id="set-the-document's-address"><p>If <var>request</var> is non-null, then set
    <var>document</var>'s <a href=https://dom.spec.whatwg.org/#concept-document-url id="navigating-across-documents:the-document's-address-4" data-x-internal="the-document's-address">URL</a> to <var>request</var>'s
@@ -626,7 +627,7 @@
 
   <div class=example>
    <p>In this example, the child document is not allowed to use <code id=navigating-across-documents:paymentrequest><a data-x-internal=paymentrequest href=https://w3c.github.io/payment-request/#dom-paymentrequest>PaymentRequest</a></code>,
-   despite being <a id=navigating-across-documents:same-origin-domain-2 href=origin.html#same-origin-domain>same origin-domain</a> at the time the child document tries to use
+   despite being <a id=navigating-across-documents:same-origin-domain-3 href=origin.html#same-origin-domain>same origin-domain</a> at the time the child document tries to use
    it. At the time the child document is initialized, only the parent document has set <code id=navigating-across-documents:dom-document-domain-3><a href=origin.html#dom-document-domain>document.domain</a></code>, and the child document has not.</p>
 
    <pre><code class='html'><c- c>&lt;!-- https://foo.example.com/a.html --&gt;</c->
@@ -646,10 +647,10 @@ document<c- p>.</c->domain <c- o>=</c-> <c- t>&apos;example.com&apos;</c-><c- p>
 
   <div class=example>
    <p>In this example, the child document <em>is</em> allowed to use
-   <code id=navigating-across-documents:paymentrequest-2><a data-x-internal=paymentrequest href=https://w3c.github.io/payment-request/#dom-paymentrequest>PaymentRequest</a></code>, despite not being <a id=navigating-across-documents:same-origin-domain-3 href=origin.html#same-origin-domain>same origin-domain</a> at the time
+   <code id=navigating-across-documents:paymentrequest-2><a data-x-internal=paymentrequest href=https://w3c.github.io/payment-request/#dom-paymentrequest>PaymentRequest</a></code>, despite not being <a id=navigating-across-documents:same-origin-domain-4 href=origin.html#same-origin-domain>same origin-domain</a> at the time
    the child document tries to use it. At the time the child document is initialized, none of
    the documents have set <code id=navigating-across-documents:dom-document-domain-4><a href=origin.html#dom-document-domain>document.domain</a></code> yet so
-   <a id=navigating-across-documents:same-origin-domain-4 href=origin.html#same-origin-domain>same origin-domain</a> falls back to a normal <a id=navigating-across-documents:same-origin-8 href=origin.html#same-origin>same origin</a> check.</p>
+   <a id=navigating-across-documents:same-origin-domain-5 href=origin.html#same-origin-domain>same origin-domain</a> falls back to a normal <a id=navigating-across-documents:same-origin-7 href=origin.html#same-origin>same origin</a> check.</p>
 
    <pre><code class='html'><c- c>&lt;!-- https://example.com/a.html --&gt;</c->
 <c- cp>&lt;!doctype html&gt;</c->
@@ -1253,7 +1254,7 @@ document<c- p>.</c->domain <c- o>=</c-> <c- t>&apos;example.com&apos;</c-><c- p>
   
 
 
-  <h5 id=the-hashchangeevent-interface><span class=secno>7.8.10.3</span> The <code id=the-hashchangeevent-interface:hashchangeevent><a href=#hashchangeevent>HashChangeEvent</a></code> interface<a href=#the-hashchangeevent-interface class=self-link></a></h5><div class=status><input onclick=toggleStatus(this) value=⋰ type=button><p class=support><strong>Support:</strong> hashchange<span class="and_chr yes"><span>Chrome for Android</span> <span>80+</span></span><span class="chrome yes"><span>Chrome</span> <span>5+</span></span><span class="ios_saf yes"><span>iOS Safari</span> <span>4.0+</span></span><span class="firefox yes"><span>Firefox</span> <span>3.6+</span></span><span class="safari yes"><span>Safari</span> <span>5+</span></span><span class="samsung yes"><span>Samsung Internet</span> <span>4+</span></span><span class="and_uc yes"><span>UC Browser for Android</span> <span>12.12+</span></span><span class="edge yes"><span>Edge</span> <span>12+</span></span><span class="ie yes"><span>IE</span> <span>8+</span></span><span class="opera yes"><span>Opera</span> <span>10.6+</span></span><span class="op_mini no"><span>Opera Mini</span> <span>None</span></span><span class="android yes"><span>Android Browser</span> <span>2.2+</span></span><p class=caniuse>Source: <a href="https://caniuse.com/#feat=hashchange">caniuse.com</a></div>
+  <h5 id=the-hashchangeevent-interface><span class=secno>7.8.10.3</span> The <code id=the-hashchangeevent-interface:hashchangeevent><a href=#hashchangeevent>HashChangeEvent</a></code> interface<a href=#the-hashchangeevent-interface class=self-link></a></h5><div class=status><input onclick=toggleStatus(this) value=⋰ type=button><p class=support><strong>Support:</strong> hashchange<span class="and_chr yes"><span>Chrome for Android</span> <span>80+</span></span><span class="chrome yes"><span>Chrome</span> <span>5+</span></span><span class="ios_saf yes"><span>iOS Safari</span> <span>4.0+</span></span><span class="firefox yes"><span>Firefox</span> <span>3.6+</span></span><span class="safari yes"><span>Safari</span> <span>5+</span></span><span class="samsung yes"><span>Samsung Internet</span> <span>4+</span></span><span class="edge yes"><span>Edge</span> <span>12+</span></span><span class="ie yes"><span>IE</span> <span>8+</span></span><span class="and_uc yes"><span>UC Browser for Android</span> <span>12.12+</span></span><span class="opera yes"><span>Opera</span> <span>10.6+</span></span><span class="op_mini no"><span>Opera Mini</span> <span>None</span></span><span class="android yes"><span>Android Browser</span> <span>2.2+</span></span><p class=caniuse>Source: <a href="https://caniuse.com/#feat=hashchange">caniuse.com</a></div>
 
   <aside class="mdn-anno wrapped before"><button onclick=toggleStatus(this) class=mdn-anno-btn><b title="Support in all current engines." class=all-engines-flag>✔</b><span>MDN</span></button><div class=feature><p><a href=https://developer.mozilla.org/en-US/docs/Web/API/HashChangeEvent title="The HashChangeEvent interface represents events that fire when the fragment identifier of the URL has changed.">HashChangeEvent</a><p class=all-engines-text>Support in all current engines.<div class=support><span class="firefox yes"><span>Firefox</span><span>3.6+</span></span><span class="safari yes"><span>Safari</span><span>5+</span></span><span class="chrome yes"><span>Chrome</span><span>5+</span></span><hr><span class="opera yes"><span>Opera</span><span>10.6+</span></span><span class="edge_blink yes"><span>Edge</span><span>79+</span></span><hr><span class="edge yes"><span>Edge (Legacy)</span><span>12+</span></span><span class="ie yes"><span>Internet Explorer</span><span>8+</span></span><hr><span class="firefox_android yes"><span>Firefox Android</span><span>4+</span></span><span class="safari_ios yes"><span>Safari iOS</span><span>5+</span></span><span class="chrome_android yes"><span>Chrome Android</span><span>Yes</span></span><span class="webview_android yes"><span>WebView Android</span><span>Yes</span></span><span class="samsunginternet_android yes"><span>Samsung Internet</span><span>Yes</span></span><span class="opera_android yes"><span>Opera Android</span><span>11+</span></span></div></div></aside><pre><code class='idl'>[<c- g>Exposed</c->=<c- n>Window</c->,
  <c- g>Constructor</c->(<c- b>DOMString</c-> <c- g>type</c->, <c- b>optional</c-> <a href='#hashchangeeventinit' id='the-hashchangeevent-interface:hashchangeeventinit'><c- n>HashChangeEventInit</c-></a> <c- g>eventInitDict</c-> = {})]
