--- a/output/multipage/semantics.html
+++ b/output/multipage/semantics.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class=split lang=en-US-x-hixie><script src=/link-fixup.js defer=""></script><meta charset=utf-8><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name=viewport><title>HTML Standard</title><meta content=#3c790a name=theme-color><link rel=stylesheet href=https://resources.whatwg.org/spec.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard.css crossorigin=""><link rel=stylesheet href=https://raw.githack.com/whatwg/whatwg.org/sideshowbarker/bikeshed-mdn-anno-styles/resources.whatwg.org/standard-shared-with-dev.css crossorigin=""><link rel=icon href=https://resources.whatwg.org/logo.svg crossorigin=""><script>
+<!DOCTYPE html><html class=split lang=en-US-x-hixie><script src=/link-fixup.js defer=""></script><meta charset=utf-8><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name=viewport><title>HTML Standard</title><meta content=#3c790a name=theme-color><link rel=stylesheet href=https://resources.whatwg.org/spec.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard-shared-with-dev.css crossorigin=""><link rel=icon href=https://resources.whatwg.org/logo.svg crossorigin=""><script>
    function toggleStatus(div) {
      div.parentNode.classList.toggle('wrapped');
    }
@@ -119,7 +119,7 @@
   
   <header id=head class="head with-buttons">
    <a href=https://whatwg.org/ class=logo><img width=100 alt=WHATWG crossorigin="" src=https://resources.whatwg.org/logo.svg height=100></a>
-   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>9 April 2020</span></h2></hgroup>
+   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>16 April 2020</span></h2></hgroup>
    
    
 
@@ -1186,7 +1186,7 @@ gave me some of the songs they wrote. I love sharing my music.<c- p>&lt;/</c-><c
     to make it more suitable for the UI in question. For example, if a user agent intends to use
     the theme color as a background and display white text over it, it might use a darker variant of
     the theme color in that part of the UI, to ensure adequate contrast.</p>
-   </dl><div class=status><input onclick=toggleStatus(this) value=⋰ type=button><p class=support><strong>Support:</strong> meta-theme-color<span class="and_chr yes"><span>Chrome for Android</span> <span>80+</span></span><span class="chrome partial"><span>Chrome (limited)</span> <span>73+</span></span><span class="ios_saf no"><span>iOS Safari</span> <span>None</span></span><span class="firefox no"><span>Firefox</span> <span>None</span></span><span class="safari no"><span>Safari</span> <span>None</span></span><span class="samsung yes"><span>Samsung Internet</span> <span>6.2+</span></span><span class="and_uc no"><span>UC Browser for Android</span> <span>None</span></span><span class="edge no"><span>Edge</span> <span>None</span></span><span class="ie no"><span>IE</span> <span>None</span></span><span class="opera no"><span>Opera</span> <span>None</span></span><span class="op_mini no"><span>Opera Mini</span> <span>None</span></span><span class="android no"><span>Android Browser</span> <span>None</span></span><p class=caniuse>Source: <a href="https://caniuse.com/#feat=meta-theme-color">caniuse.com</a></div>
+   </dl><div class=status><input onclick=toggleStatus(this) value=⋰ type=button><p class=support><strong>Support:</strong> meta-theme-color<span class="and_chr yes"><span>Chrome for Android</span> <span>80+</span></span><span class="chrome partial"><span>Chrome (limited)</span> <span>73+</span></span><span class="ios_saf no"><span>iOS Safari</span> <span>None</span></span><span class="firefox no"><span>Firefox</span> <span>None</span></span><span class="safari no"><span>Safari</span> <span>None</span></span><span class="samsung yes"><span>Samsung Internet</span> <span>6.2+</span></span><span class="edge no"><span>Edge</span> <span>None</span></span><span class="ie no"><span>IE</span> <span>None</span></span><span class="and_uc no"><span>UC Browser for Android</span> <span>None</span></span><span class="opera no"><span>Opera</span> <span>None</span></span><span class="op_mini no"><span>Opera Mini</span> <span>None</span></span><span class="android no"><span>Android Browser</span> <span>None</span></span><p class=caniuse>Source: <a href="https://caniuse.com/#feat=meta-theme-color">caniuse.com</a></div>
 
 
 
