--- a/output/multipage/structured-data.html
+++ b/output/multipage/structured-data.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class=split lang=en-US-x-hixie><script src=/link-fixup.js defer=""></script><meta charset=utf-8><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name=viewport><title>HTML Standard</title><meta content=#3c790a name=theme-color><link rel=stylesheet href=https://resources.whatwg.org/spec.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard.css crossorigin=""><link rel=stylesheet href=https://raw.githack.com/whatwg/whatwg.org/sideshowbarker/bikeshed-mdn-anno-styles/resources.whatwg.org/standard-shared-with-dev.css crossorigin=""><link rel=icon href=https://resources.whatwg.org/logo.svg crossorigin=""><script>
+<!DOCTYPE html><html class=split lang=en-US-x-hixie><script src=/link-fixup.js defer=""></script><meta charset=utf-8><meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name=viewport><title>HTML Standard</title><meta content=#3c790a name=theme-color><link rel=stylesheet href=https://resources.whatwg.org/spec.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard.css crossorigin=""><link rel=stylesheet href=https://resources.whatwg.org/standard-shared-with-dev.css crossorigin=""><link rel=icon href=https://resources.whatwg.org/logo.svg crossorigin=""><script>
    function toggleStatus(div) {
      div.parentNode.classList.toggle('wrapped');
    }
@@ -119,7 +119,7 @@
   
   <header id=head class="head with-buttons">
    <a href=https://whatwg.org/ class=logo><img width=100 alt=WHATWG crossorigin="" src=https://resources.whatwg.org/logo.svg height=100></a>
-   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>9 April 2020</span></h2></hgroup>
+   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>16 April 2020</span></h2></hgroup>
    
    
 
@@ -480,36 +480,18 @@
       is a specialization of <a href=#structuredserializeinternal id=structuredserializeinternal:structuredserializeinternal-7>StructuredSerializeInternal</a> to be consistent within this
       invocation.)</p>
      <li>
-      <p>Otherwise:
+      <p>Otherwise, for each <var>key</var> in !
+      <a id=structuredserializeinternal:enumerableownpropertynames href=https://tc39.es/ecma262/#sec-enumerableownpropertynames data-x-internal=enumerableownpropertynames>EnumerableOwnPropertyNames</a>(<var>value</var>, <var>key</var>):</p>
 
-      <ol><li><p>Let <var>enumerableKeys</var> be a new empty <a href=https://tc39.es/ecma262/#sec-list-and-record-specification-type id=structuredserializeinternal:js-list-7 data-x-internal=js-list>List</a>.<li>
-        <p>For each <var>key</var> in ! <var>value</var>.[[OwnPropertyKeys]]():</p>
+      <ol><li>
+        <p>If ! <a id=structuredserializeinternal:hasownproperty href=https://tc39.es/ecma262/#sec-hasownproperty data-x-internal=hasownproperty>HasOwnProperty</a>(<var>value</var>, <var>key</var>) is true, then:</p>
 
-        <ol><li>
-          <p>If <a href=https://tc39.es/ecma262/#sec-ecmascript-data-types-and-values id=structuredserializeinternal:js-type-3 data-x-internal=js-type>Type</a>(<var>key</var>) is String, then:</p>
-
-          <ol><li><p>Let <var>valueDesc</var> be !
-           <var>value</var>.[[GetOwnProperty]](<var>key</var>).<li><p>If <var>valueDesc</var>.[[Enumerable]] is true, then <a href=https://infra.spec.whatwg.org/#list-append id=structuredserializeinternal:list-append-5 data-x-internal=list-append>append</a> <var>key</var> to <var>enumerableKeys</var>.</ol>
-         </ol>
-       <li>
-        <p>For each <var>key</var> in <var>enumerableKeys</var>:</p>
-
-        <ol><li>
-          <p>If ! <a id=structuredserializeinternal:hasownproperty href=https://tc39.es/ecma262/#sec-hasownproperty data-x-internal=hasownproperty>HasOwnProperty</a>(<var>value</var>, <var>key</var>) is true, then:</p>
-
-          <ol><li><p>Let <var>inputValue</var> be ? <var>value</var>.[[Get]](<var>key</var>,
-           <var>value</var>).<li><p>Let <var>outputValue</var> be ?
-           <a href=#structuredserializeinternal id=structuredserializeinternal:structuredserializeinternal-8>StructuredSerializeInternal</a>(<var>inputValue</var>, <var>forStorage</var>,
-           <var>memory</var>).<li><p><a href=https://infra.spec.whatwg.org/#list-append id=structuredserializeinternal:list-append-6 data-x-internal=list-append>Append</a> { [[Key]]: <var>key</var>, [[Value]]:
-           <var>outputValue</var> } to <var>serialized</var>.[[Properties]].</ol>
-         </ol>
+        <ol><li><p>Let <var>inputValue</var> be ? <var>value</var>.[[Get]](<var>key</var>,
+         <var>value</var>).<li><p>Let <var>outputValue</var> be ?
+         <a href=#structuredserializeinternal id=structuredserializeinternal:structuredserializeinternal-8>StructuredSerializeInternal</a>(<var>inputValue</var>, <var>forStorage</var>,
+         <var>memory</var>).<li><p><a href=https://infra.spec.whatwg.org/#list-append id=structuredserializeinternal:list-append-5 data-x-internal=list-append>Append</a> { [[Key]]: <var>key</var>, [[Value]]:
+         <var>outputValue</var> } to <var>serialized</var>.[[Properties]].</ol>
        </ol>
-
-      <p class=note>The key collection performed above is very similar to the JavaScript
-      specification's <a id=structuredserializeinternal:enumerableownproperties href=https://tc39.es/ecma262/#sec-enumerableownproperties data-x-internal=enumerableownproperties>EnumerableOwnProperties</a> operation, but crucially it uses the
-      deterministic ordering provided by the [[OwnPropertyKeys]] internal method, instead of
-      reordering the keys in an unspecified manner as <a id=structuredserializeinternal:enumerableownproperties-2 href=https://tc39.es/ecma262/#sec-enumerableownproperties data-x-internal=enumerableownproperties>EnumerableOwnProperties</a> does.
-      <a href=references.html#refsJAVASCRIPT>[JAVASCRIPT]</a></p>
      </ol>
    <li><p>Return <var>serialized</var>.</ol>
 
