--- a/output/multipage/history.html
+++ b/output/multipage/history.html
@@ -119,7 +119,7 @@
   
   <header id=head class="head with-buttons">
    <a href=https://whatwg.org/ class=logo><img width=100 alt=WHATWG crossorigin="" src=https://resources.whatwg.org/logo.svg height=100></a>
-   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>17 April 2020</span></h2></hgroup>
+   <hgroup><h1 class=allcaps>HTML</h1><h2 id=living-standard class="no-num no-toc">Living Standard — Last Updated <span class=pubdate>20 April 2020</span></h2></hgroup>
    
    
 
@@ -1113,7 +1113,7 @@ State: <c- p>&lt;</c-><c- f>OUTPUT</c-> <c- e>NAME</c-><c- o>=</c-><c- s>I</c-><
 
   <hr>
 
-  <p>The <dfn id=dom-location-ancestororigins><code>ancestorOrigins</code></dfn> attribute's
+  <aside class="mdn-anno wrapped before"><button onclick=toggleStatus(this) class=mdn-anno-btn><span>MDN</span></button><div class=feature><p><a href=https://developer.mozilla.org/en-US/docs/Web/API/Location/ancestorOrigins title="The ancestorOrigins read-only property of the Location interface is a static DOMStringList containing, in reverse order, the origins of all ancestor browsing contexts of the document associated with the given Location object.">Location/ancestorOrigins</a><div class=support><span class="firefox no"><span>Firefox</span><span>No</span></span><span class="safari yes"><span>Safari</span><span>6+</span></span><span class="chrome yes"><span>Chrome</span><span>20+</span></span><hr><span class="opera yes"><span>Opera</span><span>15+</span></span><span class="edge_blink yes"><span>Edge</span><span>79+</span></span><hr><span class="edge no"><span>Edge (Legacy)</span><span>No</span></span><span class="ie no"><span>Internet Explorer</span><span>No</span></span><hr><span class="firefox_android no"><span>Firefox Android</span><span>No</span></span><span class="safari_ios yes"><span>Safari iOS</span><span>6+</span></span><span class="chrome_android yes"><span>Chrome Android</span><span>25+</span></span><span class="webview_android yes"><span>WebView Android</span><span>4.4+</span></span><span class="samsunginternet_android yes"><span>Samsung Internet</span><span>1.5+</span></span><span class="opera_android yes"><span>Opera Android</span><span>14+</span></span></div></div></aside><p>The <dfn id=dom-location-ancestororigins><code>ancestorOrigins</code></dfn> attribute's
   getter must run these steps:
 
   <ol><li><p>If this <code id=the-location-interface:location-82><a href=#location>Location</a></code> object's <a href=#relevant-document id=the-location-interface:relevant-document-35>relevant <code>Document</code></a> is
